// Format:
// Date (mm/dd/yr)
// rNumber [Author]
// 	* Modifications.
// 	- Details.
//========================================

01/25/2010
	r152 [pakpil]
	* Added SC_MAELSTROM skill.
	* Fixed SC_MANHOLE that was allow skill attacks to targets under this status. Bug report 70.

01/25/2010
	r150 [pakpil]
	* Added SC_FATALMENACE skill working as intended.
	* Minor fix in SC_BLOODYLUST skill.

01/25/2010
	r149 [Jobbie]
	* Added Mechanic Skills NC_HOVERING and NC_ANALYZE working as intended.

01/24/2010
	r147 [Jobbie]
	* Minor fix on NC_REPAIR requirements.

	r146 [Jobbie]
	* Added Mechanic Skills working as intended.
	- NC_MADOLICENCE, NC_BOOSTKNUCKLE, NC_PILEBUNKER, NC_VULCANARM, NC_FLAMELAUNCHER, NC_COLDSLOWER
	- NC_ARMSCANNON, NC_ACCELERATION, NC_SELFDESTRUCTION, NC_INFRAREDSCAN, NC_REPAIR, NC_TRAININGAXE,
	- NC_RESEARCHFE, NC_AXEBOOMERANG, NC_POWERSWING, NC_AXETORNADO.
	* Minor fix to additional movement speed on when mounting animals.
	* Minor fix to Adoramus which don't have duration when abnormal status affects.

	r145 [pakpil]
	* Merged pc_isriding function from stable.
	* Minor fix in clif_addskill that was cause some problems with SC_REPRODUCE and RG_PLAGIARISM.
	* Fixed mounting dragons that was causing uses dragons skills without dragon.
	* Merged "warg_can_falcon" from trunk.

	r144 [Jobbie]
	* Aimedbold and ArrowStorm should carry the weapon element.
	* Fixed no gemstone state when using Mistress card.
	* Fixed Enchant Blade should not target enemy.
	* Fixed White Imprison should not target non-enemy.

	r143 [pakpil]
	* Fixed WL_FROSTMISTY and WL_JACKFROST that aren't working propertly.
	- Bug report 81.

01/23/2010
	r142 [Jobbie]
	* ArchBishop Update:
	- Fixed damage calculation of Adoramus and Judex. Judex should have a sub hits of 3.
	- Redone Clementia, Canto, Praefatio, and Coloceo Heal to display only skill name above the head.
	- Ancilla and Epiclesis used now its official fail message.
	* Ranger Update:
	- Added RA_SENSITIVEKEEN skill.