@@ -948,10 +948,10 @@
 2297,9,6,1,0,0x1,0,3,1,no,0,0,0,misc,0,		SC_WEAKNESS,Masquerade - Weakness
 2298,1,6,1,0,0x1,0,5,1,no,0,0,0,weapon,0,	SC_STRIPACCESSARY,Strip Accessory
 2299,7,6,2,0,0x1,0,3,1,no,0,0,3,misc,0,		SC_MANHOLE,Man Hole
-2300,7,6,2,0,0,0,3,1,no,0,0,1,misc,0,		SC_DIMENSIONDOOR,Dimension Door
-2301,9,6,2,0,0,0,3,1,no,0,0,0,misc,0,		SC_CHAOSPANIC,Chaos Panic
-2302,7,6,2,0,0x03,5,3,1,yes,0,0,0,misc,0,		SC_MAELSTROM,Maelstrom
-2303,9,6,2,0,0,0,3,1,no,0,0,0,misc,0,		SC_BLOODYLUST,Bloody Lust
+2300,7,6,2,0,0x1,0,3,1,no,0,0,1,misc,0,		SC_DIMENSIONDOOR,Dimension Door
+2301,9,6,2,0,0x1,0,3,1,no,0,0,0,misc,0,		SC_CHAOSPANIC,Chaos Panic
+2302,7,6,2,0,0x3,5,3,1,yes,0,0,0,misc,0,		SC_MAELSTROM,Maelstrom
+2303,9,6,2,0,0x1,0,3,1,no,0,0,0,misc,0,		SC_BLOODYLUST,Bloody Lust
 2304,0,0,0,0,0,0,3,0,no,0,0,0,none,0,		SC_FEINTBOMB,Feint Bomb
 
 // Royal Guard
@@ -1013,15 +1013,15 @@
 // Minstrel/Wanderer
 2412,0,0,0,0,0,0,10,0,no,0,0,0,none,0,		WM_LESSON,Lesson
 2413,0,0,0,0,0,0,5,0,no,0,0,0,none,0,		WM_METALICSOUND,Metallic Sound
-2414,9,6,2,0,0x01,3,5,1,no,0,0,3,misc,0,		WM_REVERBERATION,Reverberation
+2414,9,6,2,0,0x1,3,5,1,no,0,0,3,misc,0,		WM_REVERBERATION,Reverberation
 2415,0,0,0,0,0,0,5,1,no,0,0,0,weapon,0,		WM_REVERBERATION_MELEE,Reverberation Melee
 2416,0,0,0,0,0,0,5,1,no,0,0,0,magic,0,		WM_REVERBERATION_MAGIC,Reverberation Magic
-2417,11,6,2,0,0x03,11,1,1,no,0,0,0,misc,0,		WM_DOMINION_IMPULSE,Dominion Impulse
-2418,8,6,2,0,0x01,0,5,1,yes,0,0,0,weapon,0,	WM_SEVERE_RAINSTORM,Severe Rainstorm
+2417,11,6,2,0,0x3,11,1,1,no,0,0,0,misc,0,		WM_DOMINION_IMPULSE,Dominion Impulse
+2418,8,6,2,0,0x1,0,5,1,yes,0,0,0,weapon,0,	WM_SEVERE_RAINSTORM,Severe Rainstorm
 2419,0,0,0,0,0,0,5,0,no,0,0,0,none,0,		WM_POEMOFNETHERWORLD,Poem of The Netherworld
 2420,0,0,0,0,0,0,5,0,no,0,0,0,none,0,		WM_VOICEOFSIREN,Voice of Siren
 2421,0,0,0,0,0,0,5,0,no,0,0,0,none,0,		WM_DEADHILLHERE,Valley of Death
-2422,8,6,2,0,0x03,11:13:15:19:21,5,1,yes,0,0,0,misc,0,		WM_LULLABY_DEEPSLEEP,Deep Sleep Lullaby
+2422,8,6,2,0,0x3,11:13:15:19:21,5,1,yes,0,0,0,misc,0,		WM_LULLABY_DEEPSLEEP,Deep Sleep Lullaby
 2423,0,0,0,0,0,0,5,0,no,0,0,0,none,0,		WM_SIRCLEOFNATURE,Circle of Nature's Sound
 2424,0,0,0,0,0,0,5,0,no,0,0,0,none,0,		WM_RANDOMIZESPELL,Improvised Song
 2425,0,0,0,0,0,0,5,0,no,0,0,0,none,0,		WM_GLOOMYDAY,Gloomy Day
