@@ -109,9 +109,9 @@
 2254,0xd7,   ,  0, 1,1000,enemy, 0x002	//RA_ICEBOUNDTRAP
 2299,0xcc,   ,  0, 1,1000,all,   0x006	//SC_MANHOLE
 2300,0xcd,   ,  0, 1,1000,all,   0x006	//SC_DIMENSIONDOOR
-2301,0xce,   ,  0, 5,1000,all,   0x00E	//SC_CHAOSPANIC
+2301,0xce,   ,  0, 5,  -1,all,   0x00E	//SC_CHAOSPANIC
 2302,0xcf,   ,  0, 5,  -1,all,   0x002	//SC_MAELSTROM
-2303,0xd0,   ,  0, 3,1000,all,   0x00E	//SC_BLOODYLUST
+2303,0xd0,   ,  0, 5,  -1,all,   0x018	//SC_BLOODYLUST
 2414,0xda,   ,  0, 2,1000,enemy,0x018	//WM_REVERBERATION
 2418,0xdb,   ,  0,11, 300,enemy, 0x800	//WM_SEVERE_RAINSTORM
 2443,0xdc,   ,  0, 1,1000,enemy, 0x008	//SO_FIREWALK
