@@ -4985,7 +4985,8 @@ int clif_status_change(struct block_list *bl, int type, int flag, unsigned int t
 		type == SI_TENSIONRELAX || type == SI_LANDENDOW || type == SI_AUTOBERSERK ||
 		type == SI_BUMP || type == SI_READYSTORM || type == SI_READYDOWN ||
 		type == SI_READYTURN || type == SI_READYCOUNTER || type == SI_DODGE ||
-		type == SI_DEVIL || type == SI_NIGHT || type == SI_INTRAVISION || type == SI_REPRODUCE)
+		type == SI_DEVIL || type == SI_NIGHT || type == SI_INTRAVISION || type == SI_REPRODUCE ||
+		type == SI_BLOODYLUST)
 		tick=0;
 
 	if( battle_config.display_status_timers && tick>0 )
